[package]
name = "nori-clone"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/jeongukjae/nori-clone"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-normalization = "0.1.20"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
postcard = { version = "1.0.0", features = ["use-std"]}
fst = "0.4"
tempfile = "3"

[[bin]]
name = "nori-clone"
path = "src/bin.rs"
